# preprocessor

./: .gitignore  CMakeLists.txt  README.md
include/: omp_processor.h  preprocessor.h  regex_engine.h
src/: lexer.l  main.cpp  omp_processor.cpp  parser.y  preprocessor.cpp  regex_engine.cpp
